--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "main": "lib/exfat",
   "dependencies": {
     "bloodline": "~1.0.0",
-    "debug": "~2.2.0",
-    "node-int64": "~0.4.0"
+    "debug": "~2.2.0"
   },
   "devDependencies": {
     "blockdevice": "~0.6.0",
