--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
-sudo: false
 node_js:
   - stable
-  - "5"
-  - "4"
-script: npm test
-branches:
-  only:
-    - master
+  - "12"
+  - "10"
+script:
+  - npm run browserify
+  - npm run minify
+  - npm test
